# sentinel

./: .env.example  .gitignore  .pii-patterns.example  CLAUDE.md  CODEOWNERS  LICENSE  Makefile  README.md  SPEC.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: crontab.txt
deploy/systemd/: sentinel-backup.service  sentinel-backup.timer  sentinel-cron@.service  sentinel-digest.timer  sentinel-listen.service  sentinel-plan.timer  sentinel-poll.timer  sentinel-push.timer
docs/: PRIVACY.md  RAILS.md  TERMS.md
docs/adr/: 001-no-llm.md  002-integer-cents.md  003-attended-vs-unattended.md  004-payday-anchored-cycle.md
scripts/: install-hooks.sh  pre-commit  sync-secrets
sentinel/: __init__.py  alerts.py  authorize.py  bills.py  bills.yaml  categorize.py  commands.py  controller.py  csv_import.py  db.py  ingest.py  normalize.py  notify.py  policies.py  policies.yaml  render.py  reports.py  rules.yaml  schema.sql  state_keys.py  telegram.py
sentinel/migrations/: 002_categorized_view.sql  003_drop_llm_calls.sql  004_events.sql  005_drop_budgets_and_llm_check.sql  006_quarantine.sql  README.md
tests/: test_authorize.py  test_bills.py  test_categorize.py  test_cli_and_client.py  test_csv_import.py  test_db.py  test_ingest_dedupe.py  test_normalize.py  test_notify.py  test_orchestration.py  test_payday.py  test_policies.py  test_poll_end_to_end.py  test_properties.py  test_relabel.py  test_reports.py
tests/fixtures/: aib_backfill_sample.csv  aib_real_format_messy.csv
