[project]
name = "sentinel"
version = "0.1.0"
description = "Personal finance observability + control (see SPEC.md)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test data/assertion lines legitimately run long; loop-var/zip nits are
# harmless inside test helpers.
"tests/**" = ["E501", "B023", "B905"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
